<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">百洋健康网</string>
    <string name="cart_name">购物车</string>
    <string name="category_name">分类</string>
    <string name="account_name">我的百洋</string>
    
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入关键字...</string>
    <string name="navigationButtonText1">迪巧专区</string>
    <string name="bottomNavigationButtonText1">首页</string>
    <string name="bottomNavigationButtonText2">分类</string>
    <string name="bottomNavigationButtonText3">我的百洋</string>
    <string name="bottomNavigationButtonText4">购物车</string>
    
    <string name="category">分类</string>

    <string name="filter">筛选</string>
    <string name="back">back</string>
    
    <string name="add_to_cart">加入购物车</string>
    
    <string name="address">收货地址</string>
    <string name="wish">收藏</string>
    <string name="coupon">优惠券</string>
    <string name="myorders">我的订单</string>
    <string name="order_detail">订单详情</string>
    <string name="go_to_comment">去评价</string>
    <string name="pull_up_to_refresh_label">正在加载更多...</string>
	<string name="pull_up_to_refresh_failed_label">加载失败，点击重试:(</string>
    <string name="select_province">请选择省/市</string>
    <string name="select_city">请选择城市</string>
    <string name="select_area">请选择区/县</string>
</resources>