<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"/>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="-4dp"/>

        <RadioGroup  
                android:id="@+id/tab_group"  
                android:layout_width="fill_parent"  
                android:layout_height="wrap_content"  
                android:gravity="center"  
                android:paddingTop="6dp"  
                android:paddingBottom="6dp" 
                android:orientation="horizontal"
                android:background="#555754">  
  
                
                <RadioButton
                    android:id="@+id/main_tab_1"
                    android:checked="true"  
                    android:text="@string/bottomNavigationButtonText1" 
                    android:drawableTop="@drawable/home_selected"
                    android:gravity="center"
                    android:background="#00000000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:button="@null"/>    
  
                <RadioButton  
                    android:id="@+id/main_tab_2"
                    android:text="@string/bottomNavigationButtonText2" 
                    android:drawableTop="@drawable/category"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:background="#00000000"
                    android:button="@null"/>  
  
                <RadioButton  
                    android:id="@+id/main_tab_3" 
                    android:text="@string/bottomNavigationButtonText3" 
                    android:drawableTop="@drawable/mycount"
                    android:gravity="center"
                    android:background="#00000000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:button="@null"/>
  
                <RadioButton
                    android:id="@+id/main_tab_4" 
                    android:text="@string/bottomNavigationButtonText4" 
                    android:drawableTop="@drawable/shoppingcart"
                    android:gravity="center"
                    android:background="#00000000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:button="@null"/>  
            </RadioGroup>  
    </LinearLayout>

</TabHost>